@@ -1,4 +1,4 @@
 icondir = $(datadir)/icons/hicolor/16x16/status
 icon_DATA = phone-error.png phone-message.png phone-connecting.png
 
-EXTRA_DIST = $(icon_DATA)
+EXTRA_DIST = $(icon_DATA) phone-connecting.svg phone-error.svg phone-message.svg
