@@ -1,4 +1,4 @@
 icondir = $(datadir)/icons/hicolor/22x22/status
 icon_DATA = phone-connecting.png phone-error.png phone-message.png
 
-EXTRA_DIST = $(icon_DATA)
+EXTRA_DIST = $(icon_DATA) phone-connecting.svg phone-error.svg phone-message.svg
